# ip_dnb

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
src/: schemas.py
src/ip_dnb/: main.py
